<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Joetz Vakanties</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Vakantie Overzicht</string>
    <string name="title_section3">Fotoboek</string>
    <string name="title_section4">Contact</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait">Even geduld aub</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="telNr">Tel. of GSM</string>
    <string name="bevestig_password">Bevestig wachtwoord</string>
    <string name="firstname">Voornaam</string>
    <string name="lastname">Naam</string>
    <string name="rrn">Rijksregisternummer</string>
    <string name="straat">Straat</string>
    <string name="straatNr">Nr.</string>
    <string name="gemeente">Gemeente</string>
    <string name="postcode">Postcode</string>
    <string name="voornaam">Voornaam</string>
    <string name="voornaam_required">Voornaam is verplicht</string>
    <string name="naam_required">Naam is verplicht</string>
    <string name="rrn_required">Rijksregisternummer is verplicht</string>
    <string name="rrn_invalid">Rijksregisternummer is niet geldig</string>
    <string name="telnr_required">Tel. of GSM is verplicht</string>
    <string name="telnr_invalid">Tel. of GSM is niet geldig</string>
    <string name="email_required">Email is verplicht</string>
    <string name="email_invalid">Email is niet geldig</string>
    <string name="password_required">Wachtwoord is verplicht</string>
    <string name="password_mismatch">Wachtwoorden komen niet overeen</string>
    <string name="straat_required">Straat is verplicht</string>
    <string name="straatnr_required">Nr. is verplicht</string>
    <string name="gemeente_required">Gemeente is verplicht</string>
    <string name="postcode_required">Postcode is verplicht</string>
    <string name="postcode_invalid">Postcode moet tussen 8000 en 9000 liggen</string>
    <string name="email_hint">Email</string>
    <string name="enter">Enter</string>
    <string name="password_hint">Wachtwoord</string>
    <string name="title_login">Inloggen</string>
    <string name="action_login">Login</string>
    <string name="registreren">Registreer</string>
    <string name="action_logout">Uitloggen</string>
    <string name="title_activity_login">Inloggen</string>
    <string name="password_invalid">Wachtwoord is niet geldig</string>
    <string name="authorization_preference_file">com.example.fabrice.joetz2.AUTHORIZATION_PREFERENCE_FILE</string>
    <string name="authorization">Authorization</string>
    <string name="title_registreren">Registreren</string>
    <string name="error_existing_email">Gebruiker bestaat al</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="aanslNr1">Aansluitingsnummer ouder</string>
    <string name="lid_bond">Is de deelnemer lid van de Bond Moyson ?</string>
    <string name="geg_contpers">Gegevens van de contactpersoon</string>
    <string name="naam">Naam</string>
    <string name="adres">Adres</string>
    <string name="is_betaler">Is de contactpersoon ook de betalende ouder?</string>
    <string name="betaler">Gegevens van de ouder die betaalt</string>
    <string name="deelnemer">Gegevens van de deelnemer</string>
    <string name="geboortedatum">Geboortedatum</string>
    <string name="ouders_deelnemer">Gegevens van de ouders</string>
    <string name="vooraam_naam_moeder">Voornaam + naam moeder</string>
    <string name="rrn_moeder">Rijksregisternummer moeder</string>
    <string name="voornaam_naam_vader">Voornaam + naam vader</string>
    <string name="rrn_vader">Rijksregisternummer vader</string>
    <string name="naam_betaler_required">Voornaam betaler is verplicht</string>
    <string name="nnaam_betaler_required">Naam betaler is verplicht</string>
    <string name="straat_betaler_required">Straat betaler is verplicht</string>
    <string name="nr_betaler_verplicht">Huisnummer betaler is verplicht</string>
    <string name="gemeente_betaler_required">Gemeente betaler is verplicht</string>
    <string name="postcode_betaler_verplicht">Postcode betaler is verplicht</string>
    <string name="naam_moeder_required">Naam moeder is verplicht</string>
    <string name="rrn_moeder_required">Rijksregisternummer moeder is verplicht</string>
    <string name="naam_vader_required">Naam vader is verplicht</string>
    <string name="rrn_vader_required">Rijksregisternummer vader is verplicht</string>
    <string name="rrn_deelnemer_required">Rijksregisternummer deelnemer is verplicht</string>
    <string name="voornaam_deelnemer_required">Voornaam deelnemer is verplicht</string>
    <string name="naam_deelenemer_required">Naam deelnemer is verplicht</string>
    <string name="straat_deelnemer_required">Straat deelnemer is verplicht</string>
    <string name="straatnr_deelnemer_required">Huisnummer deelnemer is verplicht</string>
    <string name="gemeente_deelnemer_required">Gemeente deelnemer is verplicht</string>
    <string name="postcode_deelnemer_required">Postcode deelnemer is verplicht</string>
    <string name="telnr_deelnemer_required">TelNr deelnemer is verplicht</string>
    <string name="email_deelnemer_required">Email deelnemer is verplicht</string>
    <string name="dob_deelnemer_required">Geboortedatum deelnemer is verplicht</string>
    <string name="boek_nu">Boek nu</string>
    <string name="title_inschrijven">Inschrijven</string>

</resources>
