<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fabrice.joetz2.Controllers.RegisterFragment">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/register_form"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <EditText
                android:id="@+id/rrn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/rrn"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:background="@drawable/edittext_top_bg"
                android:layout_marginTop="4dp"
                android:padding="10dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/voornaam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:hint="@string/voornaam"
                android:singleLine="true"
                android:background="@drawable/edittext_default_bg"
                android:padding="10dp"
                android:layout_marginTop="-2dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/naam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:hint="@string/lastname"
                android:singleLine="true"
                android:background="@drawable/edittext_default_bg"
                android:padding="10dp"
                android:layout_marginTop="-2dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/straat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/straat"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/straatNr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/straatNr"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/gemeente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/gemeente"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/postcode"
                android:digits="0123456789"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/postcode"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:inputType="numberDecimal"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/telNr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:hint="@string/telNr"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:background="@drawable/edittext_default_bg"
                android:padding="10dp"
                android:layout_marginTop="-2dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/registreer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/registreer_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/next"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:textColorHint="@color/loginHints"/>

            <EditText
                android:id="@+id/bevestig_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/bevestig_password"
                android:background="@drawable/edittext_bottom_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:layout_marginBottom="4dp"
                android:textColorHint="@color/loginHints"/>

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="0dp"
                android:text="@string/registreren"
                style="@style/DefaultButtonText"
                android:background="@drawable/button_default_bg"
                android:layout_marginTop="0dp"
                android:enabled="false"
                />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
