<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fabrice.joetz2.Controllers.LoginFragment"
    >

<LinearLayout
        android:id="@+id/login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        >

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:singleLine="true"
        android:textColorHint="@color/loginHints"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:imeActionLabel="@string/enter"
        android:background="@drawable/edittext_top_bg"
        android:padding="10dp" />


    <EditText
        android:id="@+id/passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textColorHint="@color/loginHints"
        android:drawableStart="@drawable/password"
        android:imeActionLabel="@string/title_login"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bottom_bg"
        android:layout_marginTop="-2dp"
        android:padding="10dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="0dp"
        android:text="@string/action_login"
        style="@style/DefaultButtonText"
        android:background="@drawable/button_default_bg"
        android:enabled="false"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="0dp"
        android:text="@string/registreren"
        style="@style/DefaultButtonText"
        android:background="@drawable/button_default_bg"
        android:layout_marginTop="5dp"
        />

</LinearLayout>

    <LinearLayout
        android:id="@+id/logout_form_buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:visibility="invisible">

        <Button
            android:id="@+id/btnSingOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:text="@string/action_logout"
            style="@style/DefaultButtonText"
            android:background="@drawable/button_default_bg"
            />

    </LinearLayout>
</RelativeLayout>









